seaqt/QtGui/gen_qcolor.h

class QColor;
class QRgba64;
typedef struct QColor QColor;
typedef struct QRgba64 QRgba64;
QColor* QColor_new();
QColor* QColor_new2(int color);
QColor* QColor_new3(int r, int g, int b);
QColor* QColor_new4(unsigned int rgb);
QColor* QColor_new5(QRgba64* rgba64);
QColor* QColor_new6(struct miqt_string name);
QColor* QColor_new7(const char* aname);
QColor* QColor_new8(int spec);
QColor* QColor_new9(QColor* color);
QColor* QColor_new10(int spec, uint16_t a1, uint16_t a2, uint16_t a3, uint16_t a4);
QColor* QColor_new11(int r, int g, int b, int a);
QColor* QColor_new12(int spec, uint16_t a1, uint16_t a2, uint16_t a3, uint16_t a4, uint16_t a5);
QColor* QColor_fromHslF4(double h, double s, double l, double a);
QColor* QColor_light1(const QColor* self, int f);
QColor* QColor_dark1(const QColor* self, int f);
QColor* QColor_lighter1(const QColor* self, int f);
QColor* QColor_darker1(const QColor* self, int f);
void QColor_delete(QColor* self);